2008-03-09  Inge Wallin  <ingwa@localhost.localdomain>

	Unify GridMap::createCircles.  Not fully projection'ed yet.
	* src/lib/GridMap.cpp (createCircles): New unified code
	(sphericalCreateCircles): removed
	(rectangularCreateCircles): removed
	(rectangularCreateCircle): handle full circles instead of half

2008-03-09  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/handlers/dgml/DGMLThemeTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLElementDictionary.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLTargetTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLIconTagHandler.{cpp,h}:
    * src/lib/geodata/GeoDataTest.cpp:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneHead.{cpp,h}:

    Adding Theme, Target and Icon tag.

2008-03-09  Inge Wallin  <inge@lysator.liu.se>

	Store if a projection repeats in X direction in the Projection.
	* src/lib/AbstractProjection.h (repeatX): new function
	(setRepeatX): new function
	* src/lib/EquirectProjection.cpp (EquirectProjection): Set repeatX
	to true
	* src/lib/MercatorProjection.cpp (MercatorProjection): Set repeatX
	to true

	Improve Mercator layout esp. of placemarks significantly.
	* src/lib/MercatorProjection.cpp (screenCoordinates): Fix code
	layout
	* src/lib/MercatorProjection.cpp (screenCoordinates): Make
	projection calculations look alike over the projections
	* src/lib/MercatorProjection.cpp (screenCoordinates): Fix
	projection calculation

	Continue towards pure Projection usage.
	* src/lib/MeasureTool.{h,cpp} (drawPath): Remove function

	Get rid of unnecessary members in GridMap.
	* src/lib/GridMap.{h,cpp} (resizeMap): remove function
	(m_imageWidth, m_imageHeight, m_imageRadius): remove members
	* src/lib/MarbleModel.cpp (resize): Don't call Gridmap::resizeMap

2008-03-08  Inge Wallin  <inge@lysator.liu.se>

	Simplify the GridMap
	* src/lib/GridMap.{h,cpp}:
	 - Remove private members m_radius, m_precision and m_planetAxis